css/styles.scss
---
---
/* color palette inspired by https://www.happyhues.co/palettes/3 */

@font-face {
    font-family: "Proxima Nova";
    src: url("/fonts/proxima_ssv/ProximaNova-Regular.otf") format("opentype")
}

@font-face {
    font-family: "FiraCode";
    src: url("/fonts/fira-code/FiraCode-Regular.ttf") format("truetype")
}

body {
    font-family: "Proxima Nova", sans-serif;
    background-color: #fffffe;
    color: #5f6c7b;
}


h1, h2, h3, h4 {
    a {
        color: #094067;
    }
    color: #094067;
    font-weight: bold;

}

pre{
    padding: 10px;
    font-family: "FiraCode", monospace;
}

.language-plaintext {
    padding: 2px;
    background-color: #3f3f3f;
    color: #ccc;
}

.info {
    font-size: 0.8em;
}

.header {
    margin-bottom: 15px;
    background-color: #d8eefe;
    padding: 15px;

    .upper-row {
        display: flex;
        justify-content: space-between;
        
    }

    .gravatar {
        display: inline-block;

        img {
            border-radius: 100px;
            width: 50px;
            margin-top: -20px;
        }
    }

    #main-header {
        padding-top: 4px;
        margin: 15px;
        display: inline-block;
    }

    .links{
        text-align: right;
        padding-top: 30px;
        .links-collection{
            display: inline-block;
            margin: 0 5px;

            span a{
                text-decoration: none;
                display: inline-block;
            }
        }
    }

    .slogan {
        font-size: 0.8em;
        padding-left: 85px;
        margin-top: -15px;
    }
}


.container {
    article {
        min-width: 100%;
        padding: 5px;

        header{
            .info {
                font-size: 0.7em;
                margin-top: -10px;
            }
        }

        .article-meta {
            display: flex;
            .category {
                h4, .label{
                    display: inline-flex;
                }

                .label { 
                   background-color: #3da9fc; 
                   color: #fffffe;
                   padding: 2px 10px;
                   border-radius: 5px;
                   margin: 10px;
                }
            }

            .tags {
                margin-left: 10px;
                h4 {
                    margin-top: 8px;
                }
                h4, .badge {
                   display: inline-flex; 
                }
                .badge-container {
                    margin: 10px;
                    display: inline-flex;

                    .badge {
                        background-color: #3da9fc; 
                        color: #fffffe;
                        padding: 5px 10px;
                        border-radius: 5px;
                        margin: 0 2px; 
                    }
                }
            }
        }

        footer {
            background-image: url(/img/separator.png);
            background-repeat: no-repeat;
            background-position: center;
            margin: 15px 0;
        }
    }
}

.cookie-law-container {
    min-width: 100%;
    min-height: 100%;
    z-index: 2000;
    position: absolute;
    top: 0;
    background-color: rgba($color: #3f3f3f, $alpha: 0.5);

    .cookie-message {
        position: absolute;
        bottom: 0;
        background-color: #3da9fc;
        color: #fffffe;
        min-width: 100%;
        display: flex;
        justify-content: space-between;

        .image-container {
            margin: auto
        }

        .message-container {
            padding: 50px;
        }
    }
}

.ads {
    margin: auto;
    max-width: 800px;
}

@media all and (max-width: 768px) { 
    /* Tablets */
}

@media all and (max-width: 480px) { 
    /* Mobile */
    .header {
        text-align: center;
        .upper-row {
            display: block;
        }
        .slogan {
            display: none;
        }

        .links {
            text-align: center;
            padding-top: 0px;
            padding-bottom: 10px;
        }
    }

    .container article{
        .article-meta {
            display: none;
        }
    }

    .cookie-law-container {
        .cookie-message {
            .message-container p {
                font-size: 0.8em;
            }
        }
    }
 }

